<resources>
    <string name="open" />
    <string name="close" />


    <string name="app_name">App Analyzer</string>
    <string name="title_activity_login_page_username">LoginPageUsername</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="appify">Appify</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="or">OR</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="top_search_categories">Top Search Categories</string>
    <string name="search">Search</string>
    <string name="help_specific_search">Help us understand what you need by answering some questions</string>
    <string name="category_question">Which category are you looking to search for?</string>
    <string name="price_range">Select a price range for your application</string>
    <string name="search_results">Search results</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>